# MandelbrotExplorer

./: .gitmodules  CMakeLists.txt  README.md
shaders/: fragment.glsl  fragment_double.glsl  vertex.glsl
src/: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp  utility.h
